# SunEnergyXT-BK

./: .gitignore  README.md  hacs.json  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: hacs.yml  hassfest.yml  home-assistant-smoke.yml  lint.yml  tests.yml
custom_components/sunEnergyXT/: __init__.py  config_flow.py  const.py  coordinator.py  data_info.py  discovery.py  equip_info.py  manifest.json  number.py  sensor.py  switch.py  tcp_client.py  util.py
tests/: conftest.py
tests/components/sunEnergyXT/: conftest.py  test_coordinator.py  test_init.py  test_no_ev_entities.py  test_number.py  test_sensor.py  test_tcp_client.py
